with true have_you_ever questions made into their own list, and explanation screens allowing user input on a per-true-question basis with review screen for supervisor approval

--- a/docassemble/USCISApplications/data/questions/combined_application_questions.yml
+++ b/docassemble/USCISApplications/data/questions/combined_application_questions.yml
@@ -11,6 +11,7 @@ objects:
   #- users[i].travel_documents: DAList.using(object_type=DAObject, there_is_another=False, complete_attribute='number')
   - users[i].travel_documents: DAList.using(there_are_any=True)
   - users[i].alternate_birthdates: DAList
+  - users[i].true_have_you_evers: DAList.using(object_type=Thing, there_are_any=True, there_is_another=False)
   #- users[i].spouse: ALIndividual # need?
   #- users[i].spouse.prior_TPS: DAList.using(object_type=DAObject, there_is_another=False, complete_attribute='start_date') # need?
   #- users[i].former_spouses: ALPeopleList.using(ask_number=True) # need?
@@ -45,6 +46,12 @@ code: |
   users[i].father_first_name
   if application_kind == "ead_and_tps":
     users[i].have_you_ever_questions
+    if users[i].any_true:
+      users[i].set_true_have_you_evers_list
+      for item in users[i].true_have_you_evers:
+        item.explanation
+      users[i].true_have_you_evers_review
+      users[i].have_you_evers_results
   users[i].complete = True
 ---
 id: your address
@@ -1681,7 +1688,62 @@ fields:
       code: |
         interpreter_present
 ---
-
+id: have you ever question explanation
+question: |
+  Provide detailed explanation to "Yes" screening question
+fields:
+  - note: |
+      You answered ***Yes*** to Question # ${ users[i].true_have_you_evers[j].name.text.split('q')[1] }:
+      
+      ***${ users[i].true_have_you_evers[j].question }***
+      
+      Please provide a detailed explanation below.
+    grid: 
+      width: 12
+      start: True
+      end: True
+  - no label: users[i].true_have_you_evers[j].explanation
+    datatype: area
+    rows: 5
+    label above field: true
+---
+id: have you ever explanation review screen
+question: |
+  Eligibility Standards Questions
+subquestion: |
+  ${ users[i].true_have_you_evers.table }
+continue button field: users[i].true_have_you_evers_review
+---
+table: users[i].true_have_you_evers.table
+rows: users[i].true_have_you_evers
+columns:
+  - 'No.': row_item.name.text.split('q')[1]
+  - Question: bold(row_item.question)
+  - Explanation/Details: row_item.explanation
+edit:
+  - row_item.explanation
+delete buttons: False
+---
+id: check results
+question: Resulting Addendum Explanations
+subquestion: |
+  % if users[i].any_true:
+  You answered "Yes" and provided explanations for the following eligibility screening questions:
+  
+  % for item in users[i].true_have_you_evers:
+    Question ${ item }: 
+    
+    **${ item.question }**
+    
+    Explanation:
+    
+    **${ item.explanation }**
+    
+    _______________________________________________________
+  % endfor
+  % endif
+continue button field: users[i].have_you_evers_results
+---
 id: Addendum skip these
 question: |
   Addendum (skip these)
@@ -2765,6 +2827,132 @@ objects:
 ---
 code: |
   users[i].tps_yes_answer_addendum.enabled = users[i].application_is_approved and application_kind == "ead_and_tps" and any([users[i].q8a, users[i].q8b, users[i].q8c, users[i].q9a, users[i].q9b, users[i].q9c, users[i].q10a, users[i].q10b, users[i].q10c, users[i].q11, users[i].q12a, users[i].q12b, users[i].q12c, users[i].q12d, users[i].q12e, users[i].q13a, users[i].q13b, users[i].q13c, users[i].q13d, users[i].q14a, users[i].q14b, users[i].q14c, users[i].q14d, users[i].q15a, users[i].q15b, users[i].q15c, users[i].q16, users[i].q17, users[i].q18a, users[i].q18b, users[i].q18c, users[i].q19, users[i].q20a, users[i].q20b, users[i].q20c, users[i].q20d, users[i].q20e, users[i].q21, users[i].q22, users[i].q23a, users[i].q23b, users[i].q23c, users[i].q24, users[i].q25, users[i].q26, users[i].q27, users[i].q28, users[i].q29, users[i].q30a, users[i].q30b, users[i].q30c, users[i].q30d, users[i].q30e, users[i].q31a, users[i].q31b, users[i].q32, users[i].q33, users[i].q34, users[i].q35, users[i].q36, users[i].q37a, users[i].q37b, users[i].q38a, users[i].q38b, users[i].q38c, users[i].q38d, users[i].q38e, users[i].q39a, users[i].q39b, users[i].q40, users[i].q41])
+---
+code: |
+  have_you_ever_questions = {
+  "q8a": "Have you EVER been convicted of any felony committed in the United States?",
+  "q8b": "Have you EVER been convicted of any misdemeanor committed in the United States?",
+  "q8c": "Have you EVER been convicted of any particularly serious crime, whether committed inside or outside of the United States?",
+  "q9a": "Have you EVER ordered, incited, assisted, or otherwise participated in the persecution of any person on account of race, religion, nationality, membership in a particular social group, or political opinion?",
+  "q9b": "Have you EVER committed serious nonpolitical crimes outside of the United States prior to your arrival in the United States?",
+  "q9c": "Have you EVER or are you NOW engaged in activities that could be reasonable grounds for concluding that you are a danger to the security of the United States?",
+  "q10a": "Have you EVER been convicted of or have you EVER committed acts which constitute the essential elements of a crime (other than a purely political offense)?",
+  "q10b": "Have you EVER been convicted of or have you EVER committed acts which constitute the essential elements of a violation of any law relating to a controlled substance as defined in section 102 of the Controlled Substances Act?",
+  "q10c": "Have you EVER been convicted of or have you EVER committed acts which constitute the essential elements of a conspiracy to violate any law relating to a controlled substance as defined in section 102 of the Controlled Substances Act?",
+  "q11": "Have you EVER been convicted of two or more criminal offenses (other than purely political offenses) for which you received sentences to confinement that, when combined, total five years or more?",
+  "q12a": "Have you EVER trafficked in or are you NOW trafficking in any controlled substance?",
+  "q12b": "Are you NOW or have you EVER knowingly assisted, abetted, conspired, or colluded with others in the unlawful trafficking of any controlled substance?",
+  "q12c": "Are you the spouse or child of an alien who unlawfully trafficked in any controlled substance?",
+  "q12d": "Are you the spouse or child of an alien who assisted, abetted, conspired, or colluded with others in the unlawful trafficking of any controlled substance?",
+  "q12e": "Within the previous five years, have you EVER obtained any financial or other benefit from the unlawful activity of your spouse (including former spouses) or parents, and you knew, or reasonably should have known, that the financial or other benefit was the product of such illicit activity?",
+  "q13a": "Have you EVER engaged, or do you plan to engage, solely, principally, or incidentally, in any activity to violate any law of the United States relating to espionage or sabotage?",
+  "q13b": "Have you EVER engaged, or do you plan to engage, solely, principally, or incidentally, in any activity to violate or evade any law prohibiting the export from the United States of goods, technology, or sensitive information?",
+  "q13c": "Have you EVER engaged, or do you plan to engage, solely, principally, or incidentally, in any other unlawful activity in the United States?",
+  "q13d": "Have you EVER engaged, or do you plan to engage, solely, principally, or incidentally, in any activity in which a purpose is to oppose, control, or overthrow the Government of the United States by force, violence, or other unlawful means, including but not limited to participating in such activities, giving support to others involved in such activities, or being a member or representative of a terrorist organization?",
+  "q14a": "Have you EVER or are you NOW engaged in terrorist activities?",
+  "q14b": "Have you EVER or are you NOW engaged in or plan to engage in activities in the United States that would have potentially serious adverse foreign policy consequences for the United States?",
+  "q14c": "Have you EVER been or are you NOW a member of the Communist or other totalitarian party, except when membership was involuntary?",
+  "q14d": "Have you EVER participated in Nazi persecution or genocide?",
+  "q15a": "Have you EVER, whether in the United States or any other country, been arrested for breaking or violating any law or ordinance, excluding minor traffic violations?",
+  "q15b": "Have you EVER, whether in the United States or any other country, been cited, charged, or indicted, for breaking or violating any law or ordinance, excluding minor traffic violations?",
+  "q15c": "Have you EVER, whether in the United States or any other country, been convicted, fined, imprisoned, placed on probation, received a suspended sentence or deferral of adjudication for breaking or violating any law or ordinance, excluding minor traffic violations?",
+  "q16": "Have you EVER been the beneficiary of a pardon, amnesty, rehabilitation decree, other act of clemency, or similar action?",
+  "q17": "Have you EVER committed a serious criminal offense in the United States and asserted immunity from prosecution?",
+  "q18a": "Have you EVER, within the past 10 years, or are you NOW engaged in prostitution or procurement of prostitution?",
+  "q18b": "Have you EVER, within the past 10 years (either directly or indirectly) procured or attempted to procure or import prostitutes or persons for the purpose of prostitution?",
+  "q18c": "Have you EVER, within the past 10 years, received, in whole or in part, the proceeds of prostitution?",
+  "q19": "Have you EVER been or do you intend to be involved in any other commercial vice?",
+  "q20a": "Have you EVER been ordered removed, and been deported from the United States?",
+  "q20b": "Have you EVER voluntarily departed the United States under an order of removal?",
+  "q20c": "Have you re-entered the United States unlawfully at any time after you were deported or you voluntarily departed?",
+  "q20d": "Has DHS reinstated your prior order of removal?",
+  "q20e": "Have you EVER failed to attend or remain in attendance at any immigration proceedings to determine your admissibility or deportability?",
+  "q21": "Have you EVER, by fraud or willfully misrepresenting a material fact, sought to obtain a visa or other documentation, admission to the United States, or any other immigration benefit?",
+  "q22": "Have you EVER assisted any other person to enter the United States in violation of the law?",
+  "q23a": "Do you NOW have a communicable disease of public health significance?",
+  "q23b": "Do you NOW have or have you EVER had a physical or mental disorder and behavior (or a history of behavior that is likely to recur) associated with the disorder which has posed or may pose a threat to the property, safety, or welfare of yourself or others?",
+  "q23c": "Are you NOW or have you EVER been a drug abuser or drug addict?",
+  "q24": "Have you EVER entered the United States as a stowaway?",
+  "q25": "Did the former Immigration and Naturalization Service (INS) EVER impose, or has DHS EVER imposed, civil monetary penalties on you for producing or using false documentation to obtain an immigration benefit?",
+  "q26": "Are you NOW subject to a final order for violation of section 274C (producing and/or using false documentation to unlawfully satisfy a requirement of the Immigration and Nationality Act)?",
+  "q27": "Do you NOW practice polygamy?",
+  "q28": "Are you NOW the guardian of, and are you accompanying, another individual who has been found to be inadmissible and who has been certified by a medical examiner to be helpless due to sickness, physical or mental disability, or infancy?",
+  "q29": "Have you EVER detained, retained, or withheld the custody of a child having a lawful claim to U.S. citizenship, outside the United States, from a U.S. citizen granted custody?",
+  "q30a": "Have you EVER ordered, incited, called for, committed, assisted, helped with, or otherwise participated in acts involving torture or genocide?",
+  "q30b": "Have you EVER ordered, incited, called for, committed, assisted, helped with, or otherwise participated in killing any person?",
+  "q30c": "Have you EVER ordered, incited, called for, committed, assisted, helped with, or otherwise participated in intentionally and severely injuring any person?",
+  "q30d": "Have you EVER ordered, incited, called for, committed, assisted, helped with, or otherwise participated in engaging in any kind of sexual contact or relations with any person who was being forced or threatened?",
+  "q30e": "Have you EVER ordered, incited, called for, committed, assisted, helped with, or otherwise participated in limiting or denying any person's ability to exercise religious beliefs?",
+  "q31a": "Have you EVER served in, been a member of, assisted in, or participated in any military unit, paramilitary unit, police unit, self-defense unit, vigilante unit, rebel group, guerrilla group, militia, or insurgent organization?",
+  "q31b": "Have you EVER served or worked in any prison, jail, prison camp, detention facility, labor camp, or any other situation that involved detaining persons?",
+  "q32": "Have you EVER been a member of, assisted in, or participated in any group, unit, or organization of any kind in which you or other persons used any type of weapon against any person or threatened to do so?",
+  "q33": "Have you EVER assisted with or participated in selling or providing weapons to any person who to your knowledge used them against another person, or in transporting weapons to any person who to your knowledge used them against another person?",
+  "q34": "Have you EVER unlawfully voted in a United States Federal, state, or local election?",
+  "q35": "Have you EVER received any type of military, paramilitary, or weapons training?",
+  "q36": "Have you EVER claimed to be a U.S. citizen (in writing or in any other way)?",
+  "q37a": "Have you EVER recruited, enlisted, conscripted, or used any person under 15 years of age to serve in or help an armed force or group?",
+  "q37b": "Have you EVER used any person under 15 years of age to take part in hostilities or to help or provide services to people in combat?",
+  "q38a": "Have you EVER committed or conspired to commit human trafficking offenses, as defined in the section 103 of the Victims of Trafficking and Violence Protection Act of 2000, in the United States or outside the United States?",
+  "q38b": "Have you EVER knowingly aided, abetted, assisted, conspired, or colluded with a human trafficker?",
+  "q38c": "Are you NOW the spouse or child of an alien who committed or conspired to commit human trafficking offenses?",
+  "q38d": "Are you NOW the spouse or child of, or are you yourself, an alien who knowingly aided, abetted, assisted, conspired, or colluded with a human trafficker?",
+  "q38e": "Within the previous five years, have you EVER obtained any financial or other benefit from the human trafficking activity of your spouse (including former spouses) or parents, and you knew, or reasonably should have known, that the financial or other benefit that you received resulted from such human trafficking?",
+  "q39a": "Are you NOW or have you EVER engaged in money laundering as described in section 1956 or 1957 of Title 18, United States Code?",
+  "q39b": "Are you NOW or have you EVER been a knowing aider, abettor, assister, conspirator, or colluder with others in money laundering?",
+  "q40": "Have you EVER been responsible for or directly carried out particularly severe violations of religious freedom, as defined in section 3 of the International Religious Freedom Act of 1998 (22 U.S.C. section 6402) while serving as a foreign government official?",
+  "q41": "Has an immigration judge or the Board of Immigration Appeals EVER determined that you filed a frivolous asylum application in the past?"
+  }
+---
+code: |
+  # Dynamically retrieve the True attributes for the user
+  users[i].true_attrs = [attr for attr in [
+      "q8a", "q8b", "q8c", "q9a", "q9b", "q9c",  # List all the attribute names here
+      "q10a", "q10b", "q10c", "q11", "q12a", "q12b", "q12c", "q12d", "q12e",
+      "q13a", "q13b", "q13c", "q13d", "q14a", "q14b", "q14c", "q14d",
+      "q15a", "q15b", "q15c", "q16", "q17", "q18a", "q18b", "q18c",
+      "q19", "q20a", "q20b", "q20c", "q20d", "q20e", "q21", "q22",
+      "q23a", "q23b", "q23c", "q24", "q25", "q26", "q27", "q28", "q29",
+      "q30a", "q30b", "q30c", "q30d", "q30e", "q31a", "q31b", "q32",
+      "q33", "q34", "q35", "q36", "q37a", "q37b", "q38a", "q38b", "q38c",
+      "q38d", "q38e", "q39a", "q39b", "q40", "q41"
+  ] if getattr(users[i], attr)]
+    
+  # Convert True attributes to a dictionary {attribute: question text}
+  users[i].answers_dict = {attr: have_you_ever_questions.get(attr, "Question not found") for attr in users[i].true_attrs}
+  if len(users[i].answers_dict):
+    for key, value in users[i].answers_dict.items():
+      users[i].true_have_you_evers.appendObject()
+      users[i].true_have_you_evers[-1].name.text = f"{key}"
+      users[i].true_have_you_evers[-1].question = f"{value}"
+    
+  users[i].set_true_have_you_evers_list = True
+---
+code: |
+  # Dynamically retrieve the True attributes for the user
+  users[i].true_attrs = [attr for attr in [
+      "q8a", "q8b", "q8c", "q9a", "q9b", "q9c",  # List all the attribute names here
+      "q10a", "q10b", "q10c", "q11", "q12a", "q12b", "q12c", "q12d", "q12e",
+      "q13a", "q13b", "q13c", "q13d", "q14a", "q14b", "q14c", "q14d",
+      "q15a", "q15b", "q15c", "q16", "q17", "q18a", "q18b", "q18c",
+      "q19", "q20a", "q20b", "q20c", "q20d", "q20e", "q21", "q22",
+      "q23a", "q23b", "q23c", "q24", "q25", "q26", "q27", "q28", "q29",
+      "q30a", "q30b", "q30c", "q30d", "q30e", "q31a", "q31b", "q32",
+      "q33", "q34", "q35", "q36", "q37a", "q37b", "q38a", "q38b", "q38c",
+      "q38d", "q38e", "q39a", "q39b", "q40", "q41"
+  ] if getattr(users[i], attr)]
+  users[i].set_true_have_you_evers_list_2 = True
+    
+  # Convert True attributes to a dictionary {attribute: question text}
+  users[i].answers_dict = {attr: have_you_ever_questions.get(attr, "Question not found") for attr in users[i].true_attrs}
+  if len(users[i].answers_dict):
+    for key, value in users[i].answers_dict.items():
+      users[i].true_have_you_evers.appendObject()
+      users[i].true_have_you_evers[-1].name.text = f"{key}"
+      users[i].true_have_you_evers[-1].question = f"{value}"
+---
+code: |
+  if any([user.q8a, user.q8b, user.q8c, user.q9a, user.q9b, user.q9c, user.q10a, user.q10b, user.q10c, user.q11, user.q12a, user.q12b, user.q12c, user.q12d, user.q12e, user.q13a, user.q13b, user.q13c, user.q13d, user.q14a, user.q14b, user.q14c, user.q14d, user.q15a, user.q15b, user.q15c, user.q16, user.q17, user.q18a, user.q18b, user.q18c, user.q19, user.q20a, user.q20b, user.q20c, user.q20d, user.q20e, user.q21, user.q22, user.q23a, user.q23b, user.q23c, user.q24, user.q25, user.q26, user.q27, user.q28, user.q29, user.q30a, user.q30b, user.q30c, user.q30d, user.q30e, user.q31a, user.q31b, user.q32, user.q33, user.q34, user.q35, user.q36, user.q37a, user.q37b, user.q38a, user.q38b, user.q38c, user.q38d, user.q38e, user.q39a, user.q39b, user.q40, user.q41]):
+    users[i].any_true = True
 ---
 attachment:
   name: TPS_yes_answer_addendum
