--- a/docassemble/USCISApplications/data/questions/combined_application_questions.yml
+++ b/docassemble/USCISApplications/data/questions/combined_application_questions.yml
@@ -2797,7 +2797,7 @@ attachment:
     - "city_of_entry": ${ users[i].city_of_entry }
     - "state_of_entry": ${ users[i].state_of_entry }
     - "i94_arrival_number": ${ users[i].i94_arrival_number }
-    - "authorized_stay_ending_date": ${ authorized_stay_ending_date.format('MM/dd/yyyy') }
+    - "authorized_stay_ending_date": ${ users[i].authorized_stay_ending_date }
     - "passport_number": ${ users[i].passport_number }
     - "most_recent_passport_country_issuing": ${ users[i].passport_issuing_country }
     - "passport_or_travel_document_expiration_date": ${ users[i].passport_expiration_date.format('MM/dd/yyyy') }
